- Refactored lots - Superheros information is encrypted-at-rest in the database - Managers must have access to Superheros to see their information details - Creating dummy data (superheros) with Java-Faker and Jfairy