@@ -1,7 +1,7 @@
 package io.avec.ced.security;
 
-import io.avec.ced.data.entity.User;
-import io.avec.ced.data.service.UserRepository;
+import io.avec.ced.data.entity.Manager;
+import io.avec.ced.data.service.ManagerRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -15,22 +15,23 @@ import java.util.List;
 @Service
 public class UserDetailsServiceImpl implements UserDetailsService {
 
-    private final UserRepository userRepository;
+    private final ManagerRepository managerRepository;
 
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        User user = userRepository.findByUsername(username);
-        if (user == null) {
-            throw new UsernameNotFoundException("No user present with username: " + username);
+        Manager manager = managerRepository.findByUsername(username);
+        if (manager == null) {
+            throw new UsernameNotFoundException("No manager present with username: " + username);
         } else {
-            return new org.springframework.security.core.userdetails.User(user.getUsername(), user.getHashedPassword(),
-                    getAuthorities(user));
+            return new org.springframework.security.core.userdetails.User(manager.getUsername(), manager.getHashedPassword(),
+                    getAuthorities(manager));
         }
     }
 
-    private static List<SimpleGrantedAuthority> getAuthorities(User user) {
-        return user.getRoles().stream().map(role -> new SimpleGrantedAuthority("ROLE_" + role.getRoleName()))
-                .toList();
+    private static List<SimpleGrantedAuthority> getAuthorities(Manager manager) {
+        return manager.getRoles().stream().map(role -> new SimpleGrantedAuthority("ROLE_" + role.getRoleName()))
+                .toList(); // Java 17
+//                .collect(Collectors.toList()); // java < 17
 
     }
 
